--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,14 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/(tabs)/settings"  ]
+    "expo-env.d.ts",
+    "app/(tabs)/settings"
+  ]
 }
