--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.4",
+    "@react-navigation/stack": "^7.1.1",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "expo": "^52.0.11",
@@ -26,6 +27,7 @@
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.7",
@@ -41,10 +43,9 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
